// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fieldFactory Creates a checkbox fieldset 1`] = `
<fieldset
  className="caldera-fieldset caldera-fieldset-checkboxes"
>
  <legend>
    Checkbox Field Set Label
  </legend>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-checkbox"
  >
    <label
      className="caldera-field-label caldera-field-label-checkbox"
      htmlFor="opt-1"
    >
      One
       
    </label>
    <input
      checked={false}
      className="caldera-field caldera-field-checkbox"
      id="opt-1"
      onChange={[Function]}
      type="checkbox"
      value="1"
    />
    <label
      htmlFor="opt-1"
    >
      One
       
    </label>
  </div>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-checkbox"
  >
    <label
      className="caldera-field-label caldera-field-label-checkbox"
      htmlFor="opt-2"
    >
      Two
       
    </label>
    <input
      aria-describedby="opt-2__help"
      checked={true}
      className="caldera-field caldera-field-checkbox"
      id="opt-2"
      onChange={[Function]}
      type="checkbox"
      value="1"
    />
    <label
      htmlFor="opt-2"
    >
      Two
       
    </label>
    <p
      className="caldera-control__help description"
      id="opt-2__help"
    >
      The Second Option
    </p>
  </div>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-checkbox"
  >
    <label
      className="caldera-field-label caldera-field-label-checkbox"
      htmlFor="opt-3"
    >
      Three
       
    </label>
    <input
      checked={false}
      className="caldera-field caldera-field-checkbox"
      id="opt-3"
      onChange={[Function]}
      type="checkbox"
      value="1"
    />
    <label
      htmlFor="opt-3"
    >
      Three
       
    </label>
  </div>
</fieldset>
`;

exports[`fieldFactory Creates a number field 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-number"
>
  <label
    className="caldera-field-label caldera-field-label-number"
    htmlFor="numberFieldId"
  >
    Number Field Label
     
  </label>
  <input
    aria-describedby="numberFieldId__help"
    className="caldera-field caldera-field-number"
    id="numberFieldId"
    max={10}
    min={1}
    onBlur={[Function]}
    onChange={[Function]}
    type="number"
    value={3}
  />
  <p
    className="caldera-control__help description"
    id="numberFieldId__help"
  >
    Number field description
  </p>
</div>
`;

exports[`fieldFactory Creates a radio field 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-radio"
>
  <label
    className="caldera-field-label caldera-field-label-radio"
    htmlFor="radioFieldLabel"
  >
    Radio Field Label
     
  </label>
  <div
    className="caldera-field caldera-field-radio"
  >
    <input
      aria-describedby="radioFieldLabel__help"
      checked={false}
      className="caldera-field caldera-field-radio"
      id="radioFieldLabel-0"
      name="radioFieldLabel"
      onChange={[Function]}
      type="radio"
      value={0}
    />
    <label>
      Zero
       
    </label>
  </div>
  <div
    className="caldera-field caldera-field-radio"
  >
    <input
      aria-describedby="radioFieldLabel__help"
      checked={true}
      className="caldera-field caldera-field-radio"
      id="radioFieldLabel-1"
      name="radioFieldLabel"
      onChange={[Function]}
      type="radio"
      value={1}
    />
    <label>
      One
       
    </label>
  </div>
  <div
    className="caldera-field caldera-field-radio"
  >
    <input
      aria-describedby="radioFieldLabel__help"
      checked={false}
      className="caldera-field caldera-field-radio"
      id="radioFieldLabel-2"
      name="radioFieldLabel"
      onChange={[Function]}
      type="radio"
      value={2}
    />
    <label>
      Two
       
    </label>
  </div>
  <p
    className="caldera-control__help description"
    id="radioFieldLabel__help"
  >
    Radio field description
  </p>
</div>
`;

exports[`fieldFactory Creates a submit button 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-submit"
>
  <label
    className="caldera-field-label caldera-field-label-submit"
    htmlFor="clickButton"
  >
     
  </label>
  <input
    className="caldera-field caldera-field-text"
    disabled={false}
    id="clickButton"
    type="submit"
    value="Click Me"
  />
  <p
    className="caldera-control__help description"
    id="clickButton__help"
  >
    your first name
  </p>
</div>
`;

exports[`fieldFactory Creates a text field 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-text"
>
  <label
    className="caldera-field-label caldera-field-label-text"
    htmlFor="firstName"
  >
    First Name
     
  </label>
  <input
    aria-describedby="firstName__help"
    className="caldera-field caldera-field-text"
    id="firstName"
    onBlur={[Function]}
    onChange={[Function]}
    type="text"
    value="roy"
  />
  <p
    className="caldera-control__help description"
    id="firstName__help"
  >
    your first name
  </p>
</div>
`;

exports[`fieldFactory Creates an autocomplete field 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-autocomplete"
>
  <label
    className="caldera-field-label caldera-field-label-autocomplete"
    htmlFor="autoComplete1"
  >
    Options
     
  </label>
  <input
    className="caldera-field caldera-field-autocomplete"
    id="autoComplete1"
    onChange={[Function]}
    value={
      Array [
        "One",
        "Three",
      ]
    }
  />
  <p
    className="caldera-control__help description"
    id="autoComplete1__help"
  >
    Help text
  </p>
</div>
`;

exports[`fieldFactory Creates an checkbox field field 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-checkbox"
>
  <label
    className="caldera-field-label caldera-field-label-checkbox"
    htmlFor="checkboxFieldLabel"
  >
    Checkbox Labe
     
  </label>
  <input
    aria-describedby="checkboxFieldLabel__help"
    checked={true}
    className="caldera-field caldera-field-checkbox"
    id="checkboxFieldLabel"
    onChange={[Function]}
    type="checkbox"
    value="1"
  />
  <label
    htmlFor="checkboxFieldLabel"
  >
    Checkbox Labe
     
    <span>
      *
    </span>
  </label>
  <p
    className="caldera-control__help description"
    id="checkboxFieldLabel__help"
  >
    Checkbox field description
  </p>
</div>
`;

exports[`fieldFactory Creates an checkbox field set 1`] = `
<fieldset
  className="caldera-fieldset caldera-fieldset-checkboxes"
>
  <legend>
    Checkbox Field Set Label
  </legend>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-checkbox"
  >
    <label
      className="caldera-field-label caldera-field-label-checkbox"
      htmlFor="opt-1"
    >
      One
       
    </label>
    <input
      checked={false}
      className="caldera-field caldera-field-checkbox"
      id="opt-1"
      onChange={[Function]}
      type="checkbox"
      value="1"
    />
    <label
      htmlFor="opt-1"
    >
      One
       
    </label>
  </div>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-checkbox"
  >
    <label
      className="caldera-field-label caldera-field-label-checkbox"
      htmlFor="opt-2"
    >
      Two
       
    </label>
    <input
      aria-describedby="opt-2__help"
      checked={true}
      className="caldera-field caldera-field-checkbox"
      id="opt-2"
      onChange={[Function]}
      type="checkbox"
      value="1"
    />
    <label
      htmlFor="opt-2"
    >
      Two
       
    </label>
    <p
      className="caldera-control__help description"
      id="opt-2__help"
    >
      The Second Option
    </p>
  </div>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-checkbox"
  >
    <label
      className="caldera-field-label caldera-field-label-checkbox"
      htmlFor="opt-3"
    >
      Three
       
    </label>
    <input
      checked={false}
      className="caldera-field caldera-field-checkbox"
      id="opt-3"
      onChange={[Function]}
      type="checkbox"
      value="1"
    />
    <label
      htmlFor="opt-3"
    >
      Three
       
    </label>
  </div>
</fieldset>
`;

exports[`fieldFactory Creates an email field 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-email"
>
  <label
    className="caldera-field-label caldera-field-label-email"
    htmlFor="emailFieldId"
  >
    Email Field Label
     
  </label>
  <input
    aria-describedby="emailFieldId__help"
    className="caldera-field caldera-field-email"
    id="emailFieldId"
    multiple={true}
    onBlur={[Function]}
    onChange={[Function]}
    type="email"
    value="emai@email.com"
  />
  <p
    className="caldera-control__help description"
    id="emailFieldId__help"
  >
    Email field description
  </p>
</div>
`;

exports[`fieldFactory Creates an fields-autocomplete field 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-autocomplete"
>
  <label
    className="caldera-field-label caldera-field-label-autocomplete"
    htmlFor="firstName"
  >
    First Name
     
  </label>
  <input
    className="caldera-field caldera-field-autocomplete"
    id="firstName"
    onChange={[Function]}
    value="roy"
  />
  <p
    className="caldera-control__help description"
    id="firstName__help"
  >
    your first name
  </p>
</div>
`;

exports[`fieldFactory Creates an select field 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-select"
>
  <label
    className="caldera-field-label caldera-field-label-select"
    htmlFor="selectFieldId"
  >
    Select Field Label
     
  </label>
  <select
    aria-describedby="selectFieldId__help"
    className="caldera-field caldera-field-select"
    id="selectFieldId"
    multiple={false}
    onChange={[Function]}
    required={true}
  >
    <option
      value={0}
    >
      Zero
    </option>
    <option
      value={1}
    >
      One
    </option>
    <option
      value={2}
    >
      Two
    </option>
  </select>
  <p
    className="caldera-control__help description"
    id="selectFieldId__help"
  >
    Select field description
  </p>
</div>
`;

exports[`fieldFactory Creates an select field identified as dropdown 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-select"
>
  <label
    className="caldera-field-label caldera-field-label-select"
    htmlFor="selectFieldId"
  >
    Select Field Label
     
  </label>
  <select
    aria-describedby="selectFieldId__help"
    className="caldera-field caldera-field-select"
    id="selectFieldId"
    multiple={false}
    onChange={[Function]}
    required={true}
  >
    <option
      value={0}
    >
      Zero
    </option>
    <option
      value={1}
    >
      One
    </option>
    <option
      value={2}
    >
      Two
    </option>
  </select>
  <p
    className="caldera-control__help description"
    id="selectFieldId__help"
  >
    Select field description
  </p>
</div>
`;

exports[`fieldFactory should create textarea 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-textarea"
>
  <label
    className="caldera-field-label caldera-field-label-textarea"
    htmlFor="textArea1"
  >
    Your message
     
  </label>
  <textarea
    aria-describedby="textArea1__help"
    className="caldera-field caldera-field-textarea"
    cols={8}
    id="textArea1"
    maxLength={500}
    minlength={10}
    onBlur={[Function]}
    onChange={[Function]}
    rows={5}
    value="The content of text area"
  />
  <p
    className="caldera-control__help description"
    id="textArea1__help"
  >
    your first name
  </p>
</div>
`;

exports[`fieldFactory should create toggle 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-select"
>
  <label
    className="caldera-field-label caldera-field-label-select"
    htmlFor="toggleFieldLabel"
  >
    Toggle Label
     
  </label>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-toggle"
  >
    <label
      className="caldera-field-label caldera-field-label-toggle"
    >
       
    </label>
    <span
      className="components-form-toggle caldera-field caldera-field-toggle is-checked"
    >
      <input
        checked={true}
        className="caldera-field caldera-field-toggle"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="components-form-toggle__track"
      />
      <span
        className="components-form-toggle__thumb"
      />
      <svg
        aria-hidden="true"
        className="components-form-toggle__on"
        focusable="false"
        height="6"
        role="img"
        viewBox="0 0 2 6"
        width="2"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h2v6H0z"
        />
      </svg>
    </span>
    <label
      className="caldera-field-label caldera-field-label-toggle"
    />
  </div>
  <p
    className="caldera-control__help description"
    id="toggleFieldLabel__help"
  >
    Toggle field description
  </p>
</div>
`;
